[build-system]
requires = ["hatchling", "versioningit"]
build-backend = "hatchling.build"

[project]
name = "pymzml"
description = "high-throughput mzML parsing"
authors = [
    { name = 'M. Koesters' },
    { name = 'J. Leufken' },
    { name = 'S. Schulze' },
    { name = 'K. Sugimoto' },
    { name = 'R. Zahedi' },
    { name = 'M. Hippler' },
    { name = 'C. Fufezan', email = 'christian@fufezan.net' }
]
urls = { Homepage = 'https://pymzml.github.com' }
requires-python = ">=3.7.0"
readme = "README.rst"
license = { text = 'The MIT license' }
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Console',
    'Intended Audience :: Education',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    'Operating System :: POSIX :: SunOS/Solaris',
    'Operating System :: Unix',
    'Programming Language :: Python :: 3.5',
    'Topic :: Scientific/Engineering :: Bio-Informatics',
    'Topic :: Scientific/Engineering :: Chemistry',
    'Topic :: Scientific/Engineering :: Medical Science Apps.',
]
dependencies = [
    'numpy >= 1.8.0',
    'regex',
]
dynamic = ["version"]

[project.optional-dependencies]
full = [
    'plotly<6.4',
    'matplotlib',
    'pynumpress>=0.0.4',
    'ms_deisotope==0.0.14',
]
plot = ['plotly<6.4', 'matplotlib',]
pynumpress = ['pynumpress>=0.0.4',]
deconvolution = ['ms_deisotope==0.0.14',]
test = [
    'cython',
    'coverage >= 4.2',
    'codecov',
    'pytest',
    'tox',
    'sphinx',
    'sphinx_rtd_theme',
    'numpydoc==1.7.0',
]

[tool.hatch.version]
source = "versioningit"

[tool.versioningit]
default-version = "0.0.0+unknown"

[tool.versioningit.next-version]
method = "smallest"

[tool.versioningit.format]
distance = "{next_version}.dev{distance}"
dirty = "{next_version}.dev{distance}"
distance-dirty = "{next_version}.dev{distance}"

[tool.hatch.build]
editable = true

[tool.hatch.metadata]
dynamic = ["version"]
